src/components/ModList.css
#mods-list {
  border-radius: var(--radius);
  border: 1px solid var(--lowkey-color);
  padding: 1em;

  display: flex;
  flex-wrap: wrap;
  gap: 0.5em;
  justify-content: space-around;

  min-width: 50vw;
}

#mods-list li {
  margin: 0;
  padding: 0;
  flex: 1 1 30%;
}

.mod-chip {
  border: 1px solid var(--lowkey-color);
  border-radius: var(--radius);
  padding: 0 1em;
  margin: 0;

  background-color: var(--card-background);

  text-decoration: none;
}

.mod-chip:hover {
  background-color: var(--lowkey-color);
  color: var(--accent-color);
cursor: pointer;
}

#total {
  margin: 0.1em 0.2em;
}
#mods h2 {
  margin-bottom: 0;
}

#mods input {
  border: 1px solid var(--lowkey-color);
  border-radius: var(--radius);
  background-color: var(--light-background-color);
  margin-left: 10px;
  padding: 4px;
  font-size: 16px;
  color: var(--text-color);
}

#mods-details {
  display: flex;
}

